force-app/main/default/objects/Portal_Authentication__c/Portal_Authentication__c.object-meta.xml
<CustomObject>
    <label>Portal Authentication</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Portal Authentication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Authentications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>