force-app/main/default/objects/Portal_Authentication__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <inlineHelpText>LU on the Contact Object</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>