force-app/main/default/objects/Portal_Authentication__c/fields/Hide_Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Hide_Welcome_Message__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide Welcome Message</label>
    <type>Checkbox</type>
</CustomField>