force-app/main/default/objects/Portal_Authentication__c/fields/Password_Reset_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Password_Reset_Expiration_Date__c</fullName>
    <label>Password Reset Expiration Date</label>
    <type>Date</type>
</CustomField>