force-app/main/default/objects/Portal_Authentication__c/fields/Password_Reset_Token__c.field-meta.xml
<CustomField>
    <fullName>Password_Reset_Token__c</fullName>
    <label>Password Reset Token</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>