force-app/main/default/objects/Portal_Authentication__c/fields/Reset_Password_Required__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Password Required</label>
    <type>Checkbox</type>
</CustomField>