force-app/main/default/objects/Portal_Authentication__c/fields/Reset_Portal_Password__c.field-meta.xml
<CustomField>
    <fullName>Reset_Portal_Password__c</fullName>
    <label>Reset Portal Password</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>