force-app/main/default/objects/Portal_Authentication__c/fields/Send_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used with workflow that automates the sending of the Welcome Email!</inlineHelpText>
    <label>Send Welcome Email</label>
    <type>Checkbox</type>
</CustomField>