force-app/main/default/objects/Portal_Authentication__c/listViews/Clients_that_have_not_logged_in.listView-meta.xml
<ListView>
    <fullName>Clients_that_have_not_logged_in</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Username__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Login__c</field>
        <operation>equals</operation>
    </filters>
    <label>Clients that have not logged in</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>