force-app/main/default/objects/Portal_Authentication__c/listViews/Clients_who_have_logged_in.listView-meta.xml
<ListView>
    <fullName>Clients_who_have_logged_in</fullName>
    <columns>NAME</columns>
    <columns>Last_Login__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Username__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Login__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Clients who have logged in</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>