force-app/main/default/objects/Portal_Authentication__c/listViews/Clients_with_Portal_Access.listView-meta.xml
<ListView>
    <fullName>Clients_with_Portal_Access</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Username__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Clients with Portal Access</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>